<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.korsolution.kontin.teamusedcar.AddUsedCar3InfoActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/White"
                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtCarInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/car_info"
                    android:textColor="@color/Black"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_margin="10dp"
                    android:background="#000000"></LinearLayout>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="หัวข้อ"
                    android:textColor="@color/Black" />

                <EditText
                    android:id="@+id/edtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/title_th"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="เลขไมล์"
                    android:textColor="@color/Black" />

                <EditText
                    android:id="@+id/edtMiles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/miles_th"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="รายละเอียดอื่นๆของรถ"
                    android:textColor="@color/Black" />

                <EditText
                    android:id="@+id/edtDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/car_detailing_th"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="ประวัติการซ่อมแซม"
                    android:textColor="@color/Black" />

                <EditText
                    android:id="@+id/edtRepair"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/round"
                    android:ems="10"
                    android:hint="@string/repair_history_th"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:padding="4dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnNext"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_gravity="right"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
