<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.korsolution.kontin.teamusedcar.Register2AddressActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/White"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/address"
            android:textColor="@color/Black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_margin="10dp"
            android:background="#000000"></LinearLayout>

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/address"
            android:maxLines="1"
            android:padding="4dp"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/spnProvince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/spnAmphoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/spnDistrict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/edtPostcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/postcode"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:padding="4dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/next" />

</android.support.constraint.ConstraintLayout>
