<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.korsolution.kontin.teamusedcar.Register6PhotoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            android:paddingTop="4dp">

            <ImageView
                android:id="@+id/imgIdentityCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/Gray"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/imgTakePhotoIdentityCard"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:alpha="0.7"
                android:background="@drawable/circle_background"
                android:paddingRight="2dp"
                android:src="@drawable/takephoto_black" />

            <TextView
                android:id="@+id/txtIdentityCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="1dp"
                android:background="@color/Transparent_Black"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/identity_card_th"
                android:textColor="@color/White" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp">

            <ImageView
                android:id="@+id/imgHouseRegistration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/Gray"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/imgTakePhotoHouseRegistration"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:alpha="0.7"
                android:background="@drawable/circle_background"
                android:paddingRight="2dp"
                android:src="@drawable/takephoto_black" />

            <TextView
                android:id="@+id/txtHouseRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="1dp"
                android:background="@color/Transparent_Black"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/house_regirtration_th"
                android:textColor="@color/White" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            android:paddingTop="2dp">

            <ImageView
                android:id="@+id/imgVatRegistration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/Gray"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/imgTakePhotoVatRegistration"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:alpha="0.7"
                android:background="@drawable/circle_background"
                android:paddingRight="2dp"
                android:src="@drawable/takephoto_black" />

            <TextView
                android:id="@+id/txtVatRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="1dp"
                android:background="@color/Transparent_Black"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/vat_registration_certificate_th"
                android:textColor="@color/White" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:paddingLeft="2dp"
            android:paddingRight="4dp"
            android:paddingTop="2dp">

            <ImageView
                android:id="@+id/imgStorefront"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/Gray"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/imgTakePhotoStorefront"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:alpha="0.7"
                android:background="@drawable/circle_background"
                android:paddingRight="2dp"
                android:src="@drawable/takephoto_black" />

            <TextView
                android:id="@+id/txtStorefront"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="1dp"
                android:background="@color/Transparent_Black"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/storefront_th"
                android:textColor="@color/White" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btnRegister"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>
